--- a/boardGameCafe/src/main/webapp/css/style_0g.css
+++ b/boardGameCafe/src/main/webapp/css/style_0g.css
@@ -249,7 +249,12 @@ select[name="mem_auth"]{
 	margin-bottom: 13px;
 }
 form[id="order_form"] input{
-	width:50px;
+	width:25px;
+	height:15px;
+	margin-left:10px;
+}
+#status00{
+	margin-left:0px;
 }
 #upstatus_input{
 	display:flex;
